gccida/g1/save_for_inline
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/save_for_inline/src/integrate.c:952:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/save_for_inline/src/integrate.c:967:23: error: use of undeclared identifier 'machine_mode'
v13 = gen_realpart( ( machine_mode)*( unsigned __int8 *)( rtl->fld[0].rtwint + 2), rtl); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/save_for_inline/src/integrate.c:968:23: error: use of undeclared identifier 'machine_mode'
v14 = gen_imagpart( ( machine_mode)*( ( unsigned __int8 *)v13 + 2), rtl); 
                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/save_for_inline/src/obj/integrate.o] Error 1
